syntax = "proto3";
option csharp_namespace = "test.Proto1";

package protoPackage;

// 请求消息
message HelloRequest {
  string name = 1;
}

// 响应消息
message HelloReply {
  string message = 1;
}

// 服务定义
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}
